--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <ng-template #noWalletFound>
-  <p style="color: red">
+  <p style="color: blueviolet">
     No Metamask Wallet found. Please use the button on the top right to connect to your Wallet!
   </p>
 </ng-template>
